Fix date picker overlapping time picker

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ body {
 }
 
 .date-display-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
